# beetroot_engine

./: .gitmodules  CMakeLists.txt
assets/fonts/: font_distribution_info.txt
assets/scenes/: example_scene.gltf  example_scene_2.gltf
assets/scenes/scene_src/: example_scene.blend
assets/scenes/shapes/: octahedron.blend  octahedron.gltf
assets/shaders/indirectdraw/: indirectdraw.frag  indirectdraw.vert
assets/shaders/line/: line.frag  line.vert
assets/shaders/lit/: lit.frag  lit.vert
assets/shaders/sky/: sky.frag  sky.vert
assets/shaders/triangle_strip/: triangle_strip.vert
assets/textures/: texture_distribution_info.txt
beet_engine/: CMakeLists.txt
beet_engine/beet_converter/: CMakeLists.txt
beet_engine/beet_converter/inc/beet_converter/: converter_interface.h  converter_types.h
beet_engine/beet_converter/src/: converter_backend.cpp  converter_cache.cpp  converter_shader.cpp  converter_texture.cpp
beet_engine/beet_core/: CMakeLists.txt
beet_engine/beet_core/inc/beet_core/: engine.h  input.h  input_types.h  time.h  window.h
beet_engine/beet_core/src/: engine.cpp  input.cpp  time.cpp  time_linux.cpp  time_win.cpp  window.cpp  window_linux.cpp  window_win.cpp
beet_engine/beet_gfx/: CMakeLists.txt
beet_engine/beet_gfx/inc/beet_gfx/: IconsFontAwesome5.h  db_asset.h  gfx_buffer.h  gfx_command.h  gfx_converter.h  gfx_debug.h  gfx_deprecated.h  gfx_descriptors.h  gfx_function_pointers.h  gfx_generate_geometry.h  gfx_imgui.h  gfx_indexed_indirect.h  gfx_interface.h  gfx_line.h  gfx_lit.h  gfx_mesh.h  gfx_pipeline.h  gfx_samplers.h  gfx_shader.h  gfx_sky.h  gfx_texture.h  gfx_triangle_strip.h  gfx_types.h  gfx_utils.h  gfx_vulkan_device.h  gfx_vulkan_platform_defines.h  gfx_vulkan_surface.h
beet_engine/beet_gfx/src/: db_asset.cpp  gfx_backend_vulkan.cpp  gfx_buffer.cpp  gfx_command.cpp  gfx_converter.cpp  gfx_debug.cpp  gfx_deprecated.cpp  gfx_descriptors.cpp  gfx_function_pointers.cpp  gfx_generate_geometry.cpp  gfx_imgui.cpp  gfx_indexed_indirect.cpp  gfx_line.cpp  gfx_lit.cpp  gfx_mesh.cpp  gfx_pipeline.cpp  gfx_samplers.cpp  gfx_shader.cpp  gfx_sky.cpp  gfx_texture.cpp  gfx_triangle_strip.cpp  gfx_utils.cpp  gfx_vulkan_surface_linux.cpp  gfx_vulkan_surface_win.cpp  gfx_vulkan_surface_windows.cpp
beet_engine/beet_gfx/third/: CMakeLists.txt
beet_engine/beet_math/: CMakeLists.txt
beet_engine/beet_math/inc/beet_math/: mat4.h  quat.h  transform.h  utilities.h  vec2.h  vec3.h  vec4.h
beet_engine/beet_math/src/: mat4.cpp  transform.cpp  utilities.cpp  vec4.cpp
beet_engine/beet_shared/: CMakeLists.txt
beet_engine/beet_shared/inc/beet_shared/: assert.h  base_64.h  beet_types.h  c_string.h  db_types.h  dds_loader.h  defer.h  filesystem.h  log.h  memory.h  os_time.h  platform_defines.h  shared_utils.h  string_utils.h  texture_formats.h
beet_engine/beet_shared/src/: base_64.cpp  c_string.cpp  dds_loader.cpp  filesystem_win.cpp  log.cpp  memory.cpp  os_time_linux.cpp  os_time_win.cpp  shared_utils.cpp  string_utils.cpp
beet_pipeline/: CMakeLists.txt  main.cpp
beet_pipeline/inc/beet_pipeline/: pipeline_cache.h  pipeline_commandlines.h  pipeline_defines.h  shader_compile.h
beet_pipeline/src/: pipeline_cache.cpp  pipeline_commandlines.cpp  shader_compile.cpp
beet_runtime/: CMakeLists.txt  main.cpp
beet_runtime/inc/runtime/: entity_builder.h  script_camera.h  widget_db.h  widget_hotloader.h  widget_manager.h  widget_manipulate.h
beet_runtime/src/: entity_builder.cpp  script_camera.cpp  widget_db.cpp  widget_hotloader.cpp  widget_manager.cpp  widget_manipulate.cpp
